// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActiveAccountsManager does not render active accounts with only a single session 1`] = `
<div
  className="cl-active-accounts-manager"
>
  <div
    className="cl-account-switcher"
  >
    <button
      className="button text primary hoverable cl-account-switcher-button"
      onClick={[Function]}
    >
      <img
        alt="John Doe"
        className="avatar cl-user-button-avatar"
        height={36}
        onError={[Function]}
        src="http://test.host/profile.png?height=64"
        title="John Doe"
        width={36}
      />
      <div
        className="cl-details"
      >
        <span>
          John
           
          Doe
        </span>
        <span />
      </div>
    </button>
    <button
      className="button text primary hoverable cl-account-switcher-button cl-account-switcher-add-button"
      onClick={[Function]}
    >
      <div
        className="cl-account-switcher-add-button-icon"
      >
        <svg
          data-filename="../shared/assets/icons/user-plus.svg"
        />
      </div>
      <span>
        Add account
      </span>
    </button>
  </div>
  <div
    className="cl-sign-out-all"
  >
    <button
      className="button outline primary hoverable cl-sign-out-all-button small"
      onClick={[Function]}
    >
      <svg
        data-filename="../shared/assets/icons/sign-out.svg"
      />
      Sign out of all accounts
    </button>
  </div>
</div>
`;

exports[`ActiveAccountsManager renders a switcher with all the available sessions 1`] = `
<div
  className="cl-active-accounts-manager"
>
  <div
    className="cl-active-account-buttonset"
  >
    <button
      className="button outline primary hoverable cl-accounts-manager-button small"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <svg
        data-filename="../shared/assets/icons/cog.svg"
      />
      Manage account
    </button>
    <button
      className="button outline primary hoverable cl-accounts-manager-button small"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <svg
        data-filename="../shared/assets/icons/sign-out.svg"
      />
      Sign out
    </button>
  </div>
  <div
    className="cl-account-switcher"
  >
    <button
      className="button text primary hoverable cl-account-switcher-button"
      onClick={[Function]}
    >
      <img
        alt="John Doe"
        className="avatar cl-user-button-avatar"
        height={36}
        onError={[Function]}
        src="http://test.host/profile.png?height=64"
        title="John Doe"
        width={36}
      />
      <div
        className="cl-details"
      >
        <span>
          John
           
          Doe
        </span>
        <span />
      </div>
    </button>
    <button
      className="button text primary hoverable cl-account-switcher-button"
      onClick={[Function]}
    >
      <img
        alt="Carla Coe"
        className="avatar cl-user-button-avatar"
        height={36}
        onError={[Function]}
        src="http://test.host/profile.png?height=64"
        title="Carla Coe"
        width={36}
      />
      <div
        className="cl-details"
      >
        <span>
          Carla
           
          Coe
        </span>
        <span />
      </div>
    </button>
    <button
      className="button text primary hoverable cl-account-switcher-button cl-account-switcher-add-button"
      onClick={[Function]}
    >
      <div
        className="cl-account-switcher-add-button-icon"
      >
        <svg
          data-filename="../shared/assets/icons/user-plus.svg"
        />
      </div>
      <span>
        Add account
      </span>
    </button>
  </div>
  <div
    className="cl-sign-out-all"
  >
    <button
      className="button outline primary hoverable cl-sign-out-all-button small"
      onClick={[Function]}
    >
      <svg
        data-filename="../shared/assets/icons/sign-out.svg"
      />
      Sign out of all accounts
    </button>
  </div>
</div>
`;

exports[`ActiveAccountsManager renders all active sessions even in single session resource mode 1`] = `
<div
  className="cl-active-accounts-manager"
>
  <div
    className="cl-account-switcher"
  >
    <button
      className="button text primary hoverable cl-account-switcher-button"
      onClick={[Function]}
    >
      <img
        alt="John Doe"
        className="avatar cl-user-button-avatar"
        height={36}
        onError={[Function]}
        src="http://test.host/profile.png?height=64"
        title="John Doe"
        width={36}
      />
      <div
        className="cl-details"
      >
        <span>
          John
           
          Doe
        </span>
        <span />
      </div>
    </button>
  </div>
  <div
    className="cl-sign-out-all"
  >
    <button
      className="button outline primary hoverable cl-sign-out-all-button small"
      onClick={[Function]}
    >
      <svg
        data-filename="../shared/assets/icons/sign-out.svg"
      />
      Sign out of all accounts
    </button>
  </div>
</div>
`;
